Fri Apr  9 16:24:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc(RetrieveHTTP): Show "Unable to build connection"
	message at lower debug level.

Fri Apr  9 15:17:53 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/FAQ.html: Added changes in maindocs from Mar 18, a few
	clarifications, and four new questions.

Wed Apr  7 19:41:12 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc (usage): Remove bogus -w flag.

Thu Apr  1 11:58:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc(main): Apply Gabriele's patch to avoid using an
	invalid matchesperpage CGI input variable.

	* htsearch/Display.cc(display) & (setVariables): Correct any invalid
	values for matches_per_page attribute to avoid div. by 0 error.

Wed Mar 31 18:21:21 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/htdig.cc: Undo March 30 change.

	* htdig/Retriever.cc: Use excludes.hasPattern before using the
	exclude list. (More elegant solution to problem, as pointed out by
	Gilles.) 

	* htsearch/Display.cc: Remove code setting URLimage to a bogus
	pattern. Instead, check that URLimage.hasPattern() before using
	it.
	
Wed Mar 31 15:16:36 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Synonym.cc: Fix previous fix of minor memory leak.
	(db pointer wasn't properly set)

Tue Mar 30 20:08:18 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/htdig.cc: If exclude_urls attribute is set to empty, set
	it to something that will never match a URL to ensure nothing is
	excluded.

	* Makefile.config.in: Fix typo leading to HTLIBS referring to itself.

Mon Mar 29 16:47:48 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(excerpt): Added patch from Gabriele to
	improve display of excerpts--show top of description always,
	otherwise try to find the excerpt.

Mon Mar 29 15:57:06 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
