@@ -312,8 +312,8 @@ following line would do it:<br>
 
 	  4.6. <a name="q4.6">Wow, ht://Dig eats up a lot of disk
 	  space. How can I cut down?</a><br>
-	  <p>There are several ways to cut down on disk space. One is to
-	  not use the "-a" option, which creates work copies of the
+	  <p>There are several ways to cut down on disk space. One is
+	  not to use the "-a" option, which creates work copies of the
 	  databases. Naturally this essentially doubles the disk
 	  usage. Changing configuration variables can also help cut down
 	  on disk usage. Decreasing max_head_length and
@@ -386,7 +386,7 @@ external_parsers: application/msword /usr/local/bin/parse_doc.pl \
 	  solution is to obtain and install Adobe Acrobat Reader 3.0,
 	  if it's available for your system. An alternative is to use
 	  an external parser with the xpdf 0.80 package installed on
-	  your system, as described in <a href="#q4.9">question 4.9</a>
+	  your system, as described in question <a href="#q4.9">4.9</a>
 	  above.</p>
 
 	  5.3. <a name="q5.3">When I run "rundig," I get a message about
@@ -437,7 +437,7 @@ external_parsers: application/msword /usr/local/bin/parse_doc.pl \
 	  <p>
 	  Most of the time, this is caused by either not setting or
 	  incorrectly setting the <a
-	  href="attrs.html#locale">attribute</a>. The default locale
+	  href="attrs.html#locale">locale</a> attribute. The default locale
 	  for most systems is the "portable" locale, which strips
 	  everything down to standard ASCII. Most systems expect
 	  something like <tt>locale: en_US</tt> or
@@ -459,7 +459,7 @@ external_parsers: application/msword /usr/local/bin/parse_doc.pl \
 	  systems, you must remove the TMPDIR environment variable from
 	  rundig, or change the code in htmerge/words.cc not to use the
 	  -T option. A third cause is the cron program on Red Hat Linux
-	  5.0 or 5.1. (See <a href="#q5.5">question 5.5</a> above.)</p>
+	  5.0 or 5.1. (See question <a href="#q5.5">5.5</a> above.)</p>
 
 	  5.10. <a name="q5.10">When htsearch has a lot of matches, it runs
 	  extremely slowly.</a><br>
@@ -484,7 +484,7 @@ external_parsers: application/msword /usr/local/bin/parse_doc.pl \
 	</address>
 <!-- Created: Sun Jun 22 23:16:38 PDT 1997 -->
 <!-- hhmts start -->
-Last modified: Fri Apr  9 16:16:21 EDT 1999
+Last modified: Fri Apr  9 17:43:12 EDT 1999
 <!-- hhmts end -->
   </body>
 </html>
