@@ -1,3 +1,7 @@
+Fri Apr  9 16:47:34 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdoc/FAQ.html: Fixed a few typos.
+
 Fri Apr  9 16:24:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/Document.cc(RetrieveHTTP): Show "Unable to build connection"
